# sayHi_tempest_plugin_outtree

./: README.rst  requirements.txt  setup.cfg
demo_tempest_plugin/: config.py  plugin.py
demo_tempest_plugin/tests/: base.py  test_sayhi.py
